[package]
name = "probes"
version = "0.1.0"
authors = ["Nicolas Fraison <nfraison@yahoo.fr>"]
edition = "2021"

[[bin]]
name = "mempoke"
path = "src/bin/mempoke.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async scheduler
tokio = { version = "1", features = ["full", "tracing"] }
# Http client
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
# Prometheus
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
axum = "0.4"
# Log
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
# Other
argparse = "0.2.2"
serde_json = "1.0"
hex = "0.4.3"
bytes = "1"
# Debug
console-subscriber = "0.1.0"