[package]
name = "probes"
version = "0.3.5"
authors = ["Nicolas Fraison <nfraison@yahoo.fr>"]
edition = "2021"

[[bin]]
name = "mempoke"
path = "src/bin/mempoke.rs"

[dependencies]
# Async scheduler
tokio = { version = "1", features = ["full", "tracing"] }
# Http client
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.23"
# Prometheus
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
axum = "0.4"
# Log
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
# Other
argparse = "0.2.2"
serde_json = "1.0"
hex = "0.4"
bytes = "1"
# Debug
console-subscriber = "0.1"
# Test
tokio-test = "0.4"
wiremock = "0.5"
#mockall = "0.11"
# Error management
thiserror = "1.0.30"

[profile.release]
lto = true