[package]
name = "probes"
version = "0.3.6"
authors = ["Nicolas Fraison <nfraison@yahoo.fr>"]
edition = "2021"

[[bin]]
name = "mempoke"
path = "src/bin/mempoke.rs"

[dependencies]
# Async scheduler
tokio = { version = "1", features = ["full", "tracing"] }
# Http client
hyper = { version = "0", features = ["full"] }
hyper-rustls = "0"
# Prometheus
prometheus = { version = "0", features = ["process"] }
lazy_static = "1"
axum = "0"
# Log
tracing = "0"
tracing-subscriber = "0"
tracing-futures = "0"
# Other
argparse = "0"
serde_json = "1"
hex = "0"
bytes = "1"
# Debug
console-subscriber = "0"
# Test
tokio-test = "0"
wiremock = "0"
#mockall = "0.11"
# Error management
thiserror = "1"

[profile.release]
lto = true